--- a/index.html
+++ b/index.html
@@ -4,49 +4,89 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="assets/favicon.png" type="image/png">
     <title>Home | Phanerosis Carpentry</title>
     <link rel="stylesheet" href="stylesheet.css" />
     <link href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <script src="script.js" defer></script>
+    <script src="phanerosis.js" defer></script>
 
 </head>
 
 <body>
     <header class="main-header">
 
-            <div class="container-brand">
-                <img src="./assets/color_logo.png" alt="logo">
-                <div class="brand-name"><span class="company-red">P</span>hanerosis <span class = "company-yellow">F</span>urniture <span class="company-green">E</span>nt</div>
-            </div>
-            <ul class="main-menu hideOnSmallScreens">
-                <li ><a href="index.html">Home</a></li>
-                <li ><a href="about.html">About</a></li>
-                <li ><a href="products.html">Products</a></li>
-                <li ><a href="contact.html">Contact</a></li>
-            </ul>
-            <span class = "menu-toggle" onclick="showSideBar()">
-                <span class="material-symbols-outlined menu">menu</span>
-            </span>
+        <div class="container-brand">
+            <img src="./assets/color_logo.png" alt="logo">
+            <div class="brand-name"><span class="company-red">P</span>hanerosis <span
+                    class="company-yellow">F</span>urniture <span class="company-green">E</span>nt</div>
+        </div>
+        <ul class="main-menu hideOnSmallScreens">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <span class="menu-toggle" onclick="showSideBar()">
+            <span class="material-symbols-outlined menu">menu</span>
+        </span>
 
-            <ul class="sidebar">
-                <li onclick="hideSideBar()">
-                    <span class="material-symbols-outlined close">close</span>
-                </li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="products.html">Products</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+        <ul class="sidebar">
+            <li onclick="hideSideBar()">
+                <span class="material-symbols-outlined close">close</span>
+            </li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </header>
 
     <section class="hero-section">
-        <div class="container">
-            <h2>Custom Carpentry Solutions</h2>
-            <p>Browse handmade wooden furniture and place your request with ease.</p>
-            <a href="products.html" class="btn-primary">View Products</a>
+
+        <div class="slider-wrapper">
+            <div class="slideshow-container" id="slider">
+                <div class="slide">
+                    <div class="numbertext">1 / 3</div>
+                    <img class="pix" src="assets/kitchen4.jpg">
+                    <div class="text-block">
+                        <h2>Custom Kitchen Designs</h2>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="numbertext">2/3</div>
+                    <img class="pix" src="assets/kitchen2.jpg">
+                    <div class="text-block">
+                        <h2>Custom Kitchen Designs</h2>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="numbertext">3/3</div>
+                    <img class="pix" src="assets/kitchen3.jpg">
+                    <div class="text-block">
+                        <h2>Custom Kitchen Designs</h2>
+                    </div>
+                </div>
+
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <div class="hero-accent">
+                <h3>Design with<br><span>Intention</span></h3>
+                <p>Every kitchen tells a story.<br>We help you craft yours with purpose.</p>
+            </div>
+            <br>
+
+            <div style="text-align: center;">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
+
         </div>
+
+
     </section>
 
     <section class="highlights">
@@ -84,6 +124,8 @@
         function hideSideBar() {
             const sidebar = document.querySelector('.sidebar').classList.remove('active');  // hide sidebar
         }
+
+
     </script>
 
 </body>
