--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
                     <div class="numbertext">1 / 3</div>
                     <img class="pix" src="assets/kitchen4.jpg">
                     <div class="text-block">
-                        <h2>Custom Kitchen Designs</h2>
+                        <h2></h2>
                     </div>
                 </div>
                 <div class="slide">
                     <div class="numbertext">2/3</div>
                     <img class="pix" src="assets/kitchen2.jpg">
                     <div class="text-block">
-                        <h2>Custom Kitchen Designs</h2>
+                        <h2></h2>
                     </div>
                 </div>
                 <div class="slide">
                     <div class="numbertext">3/3</div>
                     <img class="pix" src="assets/kitchen3.jpg">
                     <div class="text-block">
-                        <h2>Custom Kitchen Designs</h2>
+                        <h2></h2>
                     </div>
                 </div>
 
@@ -73,20 +73,16 @@
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
             <div class="hero-accent">
-                <h3>Design with<br><span>Intention</span></h3>
+                <h3>Design <br><span>with Intention</span></h3>
                 <p>Every kitchen tells a story.<br>We help you craft yours with purpose.</p>
             </div>
             <br>
-
             <div style="text-align: center;">
                 <span class="dot" onclick="currentSlide(1)"></span>
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
             </div>
-
         </div>
-
-
     </section>
 
     <section class="highlights">
@@ -105,6 +101,33 @@
                     <h4>🚞 Custom Orders</h4>
                     <p>Request furniture to fit your exact needs and style.</p>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="view-cards">
+        <div class=furniture-grid>
+
+            <div class="furniture-cards">
+                <img class="pic" src="assets/closet1.jpg" alt="Closet Set">
+                <p> The first blog </p>
+            </div>
+
+
+            <div class="furniture-cards">
+                <img class="pic" src="assets/dining_alt.jpg" alt="Dining Set">
+                <p> The first blog </p>
+            </div>
+
+            <div class="furniture-cards">
+                <img class="pic" src="assets/kitchen3.jpg" alt="Kitchen Set">
+                <p> The first blog </p>
+            </div>
+
+
+            <div class="furniture-cards">
+                <img class="pic" src="assets/bed1.jpg" alt="Bedroom Set">
+                <p> The first blog </p>
             </div>
         </div>
     </section>
