fixed the issue of a section moving into the other

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
     </section>
 
-    <section class="highlights">
+    <section class="highlights-section">
         <div class="container">
             <h3>Why Choose Us?</h3>
             <div class="features">
