--- a/products.html
+++ b/products.html
@@ -10,7 +10,6 @@
     <link href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    <script src="phanerosis.js" defer></script>
 
 </head>
 
@@ -51,18 +50,8 @@
         </div>
     </footer>
 
-    <script>
-        function showSideBar() {
-            const sidebar = document.querySelector('.sidebar').classList.add('active');
-            // show sidebar
-        }
+    <script src="phanerosis.js"></script>
 
-        function hideSideBar() {
-            const sidebar = document.querySelector('.sidebar').classList.remove('active');  // hide sidebar
-        }
-
-
-    </script>
 
 </body>
 
