worked on the about page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-    
+
 
 </head>
 
@@ -218,7 +218,9 @@
         </div>
     </section>
 
-
+    <button class="backToTop" id="backToTopBtn">
+        <span class="arrow-up">^</span>
+    </button>
 
     <footer class="site-footer">
         <div class="container">
@@ -226,7 +228,7 @@
         </div>
     </footer>
 
-<script src="phanerosis.js"></script>
+    <script src="phanerosis.js"></script>
 
 </body>
 
