worked on formatted the pict on about page

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
         <div class="about-comp-head">
             <h2 class="about-heading">About the Company</h2>
             <div class="crop-box">
-                <img src="/assets/IMG-20251107-WA0019.jpg" class="top-crop" alt="furniture">
+                <img  src="./assets/kitchen6.jpg" alt="furniture">
             </div>
 
             <!-- About the Company -->
