worked on sisebar margin

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 </div>
 
                 <div class="furniture-cards">
-                    <img class="pic" src="assets/closet1.jpg" alt="Kitchen Set">
+                    <img class="pic" src="assets/kitchen6.jpg" alt="Kitchen Set">
                     <p> Insitu Kitchen Worktop </p>
                 </div>
 
