--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="assets/favicon.png" type="image/png">
-    <title>About|Phanerosis Carpentry</title>
+    <title>About|Phanerosis Furniture</title>
     <link rel="stylesheet" href="stylesheet.css" />
     <link href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
@@ -69,8 +69,8 @@
             </p>
 
             <p class="about-text-1">
-                At Phanerosis, quality is not an
-                option—it is our identity.
+                At Phanerosis Furniture Enterprise, quality is not an
+                option—it is our identity!
             </p>
                 <p>
                  Timeless Pieces for Today’s Living.
