--- a/contact.html
+++ b/contact.html
@@ -75,13 +75,13 @@
             </a>
 
 
-            <a class="contact-email" data-email="sales@phanerosisfurniture.com">
+            <a class="contact-email" data-email="joesammy2011@yahoo.com">
                 <div class="contact-item-email">
                     <div class="icon-circle">
                         <i class='bx bx-envelope'></i>
                     </div>
                     <div class="text-blck">
-                    <p><strong>Email:</strong> sales@phanerosisfurniture.com</p>
+                    <p><strong>Email:</strong> joesammy2011@yahoo.com</p>
                 </div>
                 </div>
             </a>
