--- a/index.html
+++ b/index.html
@@ -115,18 +115,18 @@
             <div class=furniture-grid-kitchen>
 
                 <div class="furniture-cards">
-                    <img class="pic" src="assets/kitchen5.jpg" alt="kitchen Set" onclick="openModal()">
+                    <img class="enlarge-img" src="assets/kitchen5.jpg" alt="kitchen Set" onclick="openModal()">
                     <p> Brown Marble Kitchen Worktop </p>
                 </div>
 
 
                 <div class="furniture-cards">
-                    <img class="pic" src="assets/IMG-20251107-WA0011.jpg" alt="Kitchen Set">
+                    <img class="enlarge-img" src="assets/IMG-20251107-WA0011.jpg" alt="Kitchen Set">
                     <p> Grey Kitchen Worktop </p>
                 </div>
 
                 <div class="furniture-cards">
-                    <img class="pic" src="assets/kitchen3.jpg" alt="Kitchen Set">
+                    <img class="enlarge-img" src="assets/kitchen3.jpg" alt="Kitchen Set">
                     <p> Insitu Kitchen Worktop </p>
                 </div>
 
@@ -151,19 +151,19 @@
 
             <div class=furniture-grid-kitchen>
 
-                <div class="furniture-cards">
-                    <img class="pic" src="assets/kitchen5.jpg" alt="kitchen Set" onclick="openModal()">
+                <div class="furniture-cards"> 
+                    <img  src="assets/kitchen5.jpg"  class="enlarge-img" alt="kitchen Set" onclick="openModal()">
                     <p> Brown Marble Kitchen Worktop </p>
                 </div>
 
 
                 <div class="furniture-cards">
-                    <img class="pic" src="assets/IMG-20251107-WA0011.jpg" alt="Kitchen Set">
+                    <img src="assets/IMG-20251107-WA0011.jpg"  class="enlarge-img" alt="Kitchen Set">
                     <p> Grey Kitchen Worktop </p>
                 </div>
 
                 <div class="furniture-cards">
-                    <img class="pic" src="assets/kitchen6.jpg" alt="Kitchen Set">
+                    <img  src="assets/kitchen6.jpg"  class="enlarge-img" alt="Kitchen Set">
                     <p> Insitu Kitchen Worktop </p>
                 </div>
 
@@ -190,18 +190,18 @@
             <div class=furniture-grid-kitchen>
 
                 <div class="furniture-cards">
-                    <img class="pic" src="assets/bed1.jpg" alt="solid wooden bed" onclick="openModal()">
+                    <img src="assets/bed1.jpg"  class="enlarge-img" alt="solid wooden bed" onclick="openModal()">
                     <p> Solid Wooden Bed </p>
                 </div>
 
 
                 <div class="furniture-cards">
-                    <img class="pic" src="assets/bedroom closet.jpg" alt="bedroom-closet">
+                    <img  src="assets/bedroom closet.jpg"  class="enlarge-img" alt="bedroom-closet">
                     <p> Wall to Wall Solid Wooden Closet </p>
                 </div>
 
                 <div class="furniture-cards">
-                    <img class="pic" src="assets/closet1.jpg" alt="bedroom-closet">
+                    <img  src="assets/closet1.jpg"  class="enlarge-img" alt="bedroom-closet">
                     <p> Solid Wood Closet </p>
                 </div>
 
@@ -221,6 +221,10 @@
     <button class="backToTop" id="backToTopBtn">
         <span class="arrow-up">^</span>
     </button>
+
+    <div id="imgLightbox">
+    <img id="imgLightboxContent">
+</div>
 
     <footer class="site-footer">
         <div class="container">
