--- a/index.html
+++ b/index.html
@@ -129,10 +129,11 @@
                     <img class="enlarge-img" src="assets/kitchen3.jpg" alt="Kitchen Set">
                     <p> Insitu Kitchen Worktop </p>
                 </div>
-
+                <a href="products.html">
+                    <button class="view-more-btn">View More </button></a>
             </div>
 
-            <button class="view-more-btn">View More</button>
+
 
             <!-- Modal for enlarged image
             <--div id="imageModal" class="modal">
@@ -151,25 +152,25 @@
 
             <div class=furniture-grid-kitchen>
 
-                <div class="furniture-cards"> 
-                    <img  src="assets/kitchen5.jpg"  class="enlarge-img" alt="kitchen Set" onclick="openModal()">
+                <div class="furniture-cards">
+                    <img src="assets/kitchen5.jpg" class="enlarge-img" alt="kitchen Set" onclick="openModal()">
                     <p> Brown Marble Kitchen Worktop </p>
                 </div>
 
 
                 <div class="furniture-cards">
-                    <img src="assets/IMG-20251107-WA0011.jpg"  class="enlarge-img" alt="Kitchen Set">
+                    <img src="assets/IMG-20251107-WA0011.jpg" class="enlarge-img" alt="Kitchen Set">
                     <p> Grey Kitchen Worktop </p>
                 </div>
 
                 <div class="furniture-cards">
-                    <img  src="assets/kitchen6.jpg"  class="enlarge-img" alt="Kitchen Set">
+                    <img src="assets/kitchen6.jpg" class="enlarge-img" alt="Kitchen Set">
                     <p> Insitu Kitchen Worktop </p>
                 </div>
-
+                <a href="products.html">
+                    <button class="view-more-btn">View More </button></a>
             </div>
 
-            <button class="view-more-btn">View More</button>
 
             <!-- Modal for enlarged image
             <--div id="imageModal" class="modal">
@@ -190,32 +191,35 @@
             <div class=furniture-grid-kitchen>
 
                 <div class="furniture-cards">
-                    <img src="assets/bed1.jpg"  class="enlarge-img" alt="solid wooden bed" onclick="openModal()">
+                    <img src="assets/bed1.jpg" class="enlarge-img" alt="solid wooden bed" onclick="openModal()">
                     <p> Solid Wooden Bed </p>
                 </div>
 
 
                 <div class="furniture-cards">
-                    <img  src="assets/bedroom closet.jpg"  class="enlarge-img" alt="bedroom-closet">
+                    <img src="assets/bedroom closet.jpg" class="enlarge-img" alt="bedroom-closet">
                     <p> Wall to Wall Solid Wooden Closet </p>
                 </div>
 
                 <div class="furniture-cards">
-                    <img  src="assets/closet1.jpg"  class="enlarge-img" alt="bedroom-closet">
+                    <img src="assets/closet1.jpg" class="enlarge-img" alt="bedroom-closet">
                     <p> Solid Wood Closet </p>
                 </div>
-
+                <a href="products.html">
+                    <button class="view-more-btn">View More </button></a>
             </div>
 
-            <button class="view-more-btn">View More</button>
+
 
             <!-- Modal for enlarged image
             <--div id="imageModal" class="modal">
                 <span class="close" onclick="closeModal()">✖</span>
                 <img class="modal-content" id="largeImage">
             </div-->
-
         </div>
+
+
+
     </section>
 
     <button class="backToTop" id="backToTopBtn">
@@ -223,8 +227,8 @@
     </button>
 
     <div id="imgLightbox">
-    <img id="imgLightboxContent">
-</div>
+        <img id="imgLightboxContent">
+    </div>
 
     <footer class="site-footer">
         <div class="container">
