--- a/products.html
+++ b/products.html
@@ -43,7 +43,130 @@
         </ul>
     </header>
 
+       <section class="view-cards">
 
+        <div class="furniture-type-kitchen">
+            <h4>Furniture Types</h4>
+            <h5> Shop by Kitchen</h5>
+
+
+            <div class=furniture-grid-kitchen>
+
+                <div class="furniture-cards">
+                    <img class="enlarge-img" src="assets/kitchen5.jpg" alt="kitchen Set" onclick="openModal()">
+                    <p> Brown Marble Kitchen Worktop </p>
+                </div>
+
+
+                <div class="furniture-cards">
+                    <img class="enlarge-img" src="assets/IMG-20251107-WA0011.jpg" alt="Kitchen Set">
+                    <p> Grey Kitchen Worktop </p>
+                </div>
+
+                <div class="furniture-cards">
+                    <img class="enlarge-img" src="assets/kitchen3.jpg" alt="Kitchen Set">
+                    <p> Insitu Kitchen Worktop </p>
+                </div>
+                <a href="products.html">
+                    <button class="view-more-btn">View More </button></a>
+            </div>
+
+
+
+            <!-- Modal for enlarged image
+            <--div id="imageModal" class="modal">
+                <span class="close" onclick="closeModal()">✖</span>
+                <img class="modal-content" id="largeImage">
+            </div-->
+
+        </div>
+    </section>
+
+    <section class="view-cards">
+        <div class="furniture-type-kitchen">
+            <h4>Furniture Types</h4>
+            <h5> Shop by Closet</h5>
+
+
+            <div class=furniture-grid-kitchen>
+
+                <div class="furniture-cards">
+                    <img src="assets/kitchen5.jpg" class="enlarge-img" alt="kitchen Set" onclick="openModal()">
+                    <p> Brown Marble Kitchen Worktop </p>
+                </div>
+
+
+                <div class="furniture-cards">
+                    <img src="assets/IMG-20251107-WA0011.jpg" class="enlarge-img" alt="Kitchen Set">
+                    <p> Grey Kitchen Worktop </p>
+                </div>
+
+                <div class="furniture-cards">
+                    <img src="assets/kitchen6.jpg" class="enlarge-img" alt="Kitchen Set">
+                    <p> Insitu Kitchen Worktop </p>
+                </div>
+                <a href="products.html">
+                    <button class="view-more-btn">View More </button></a>
+            </div>
+
+
+            <!-- Modal for enlarged image
+            <--div id="imageModal" class="modal">
+                <span class="close" onclick="closeModal()">✖</span>
+                <img class="modal-content" id="largeImage">
+            </div-->
+
+        </div>
+    </section>
+
+
+    <section class="view-cards">
+        <div class="furniture-type-kitchen">
+            <h4>Furniture Types</h4>
+            <h5> Shop by Bedroom Furniture</h5>
+
+
+            <div class=furniture-grid-kitchen>
+
+                <div class="furniture-cards">
+                    <img src="assets/bed1.jpg" class="enlarge-img" alt="solid wooden bed" onclick="openModal()">
+                    <p> Solid Wooden Bed </p>
+                </div>
+
+
+                <div class="furniture-cards">
+                    <img src="assets/bedroom closet.jpg" class="enlarge-img" alt="bedroom-closet">
+                    <p> Wall to Wall Solid Wooden Closet </p>
+                </div>
+
+                <div class="furniture-cards">
+                    <img src="assets/closet1.jpg" class="enlarge-img" alt="bedroom-closet">
+                    <p> Solid Wood Closet </p>
+                </div>
+                <a href="products.html">
+                    <button class="view-more-btn">View More </button></a>
+            </div>
+
+
+
+            <!-- Modal for enlarged image
+            <--div id="imageModal" class="modal">
+                <span class="close" onclick="closeModal()">✖</span>
+                <img class="modal-content" id="largeImage">
+            </div-->
+        </div>
+
+
+
+    </section>
+
+    <button class="backToTop" id="backToTopBtn">
+        <span class="arrow-up">^</span>
+    </button>
+
+    <div id="imgLightbox">
+        <img id="imgLightboxContent">
+    </div>
 
     <footer class="site-footer">
         <div class="container">
@@ -52,6 +175,9 @@
     </footer>
 
     <script src="phanerosis.js"></script>
+
+
+
 
 
 </body>
