--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
             <div class="contact-header">
                 <h2>Contact Form</h2>
             </div>
-            <form action="/action_page.php">
+            <form action="mailto:gyebiwinfred1@yahoo.com">
                 <label for="fname">First Name</label>
                 <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
@@ -116,16 +116,17 @@
 
                 <label for="country">Country</label>
                 <select id="country" name="country">
-                    <option value="australia">Australia</option>
+                    <option value="ghana">Ghana</option>
                     <option value="canada">Canada</option>
                     <option value="usa">USA</option>
-                    <option value="ghana">Ghana</option>
+                   
                 </select>
 
                 <label for="subject">Subject</label>
                 <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
-                <input type="submit" value="Submit">
+                <button id="emailSender" type="button" class="send-btn">Submit</button>
+
             </form>
         </div>
 
@@ -135,7 +136,7 @@
 
     <footer class="site-footer">
         <div class="container">
-            <p>&copy; 2025 BeIT Lechem. All rights reserved.</p>
+            <p> &copy; 2025 BeIT Lechem. All rights reserved.</p>
         </div>
     </footer>
 
